--- a/MemoryManagement/src/memorymanagement/AddProcess.fxml
+++ b/MemoryManagement/src/memorymanagement/AddProcess.fxml
@@ -3,12 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="newprocess.FXMLDocumentController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="581.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.AddProcessController">
    <children>
       <VBox alignment="CENTER" layoutX="93.0" layoutY="-17.0" prefHeight="200.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -32,7 +34,7 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="77.0" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="77.0" prefHeight="60.0" prefWidth="521.0">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
                      <children>
@@ -46,7 +48,7 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
                      <children>
-                        <Button fx:id="confirmNumber" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handlecSegmentNumberConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm">
+                        <Button fx:id="confirmNumber" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentNumberConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm">
                            <HBox.margin>
                               <Insets />
                            </HBox.margin>
@@ -55,11 +57,11 @@
                   </HBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="60.0" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="60.0" prefHeight="60.0" prefWidth="521.0">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
                      <children>
-                        <Label fx:id="segmentName" disable="true" text="Segment Name:" />
+                        <Label fx:id="labelsegmentName" disable="true" text="Segment Name:" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
@@ -69,16 +71,16 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
                      <children>
-                        <Button fx:id="confirmName" alignment="CENTER" contentDisplay="CENTER" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handlecSegmentNameConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm" />
+                        <Button fx:id="confirmName" alignment="CENTER" contentDisplay="CENTER" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentNameConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm" />
                      </children>
                   </HBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="88.0" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="88.0" prefHeight="60.0" prefWidth="200.0">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
                      <children>
-                        <Label fx:id="segmentSize" disable="true" text="Segment Size:" />
+                        <Label fx:id="labelsegmentSize" disable="true" text="Segment Size:" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
@@ -88,7 +90,7 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
                      <children>
-                        <Button fx:id="confirmSize" alignment="CENTER" contentDisplay="CENTER" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handlecSegmentSizeConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm" />
+                        <Button fx:id="confirmSize" alignment="CENTER" contentDisplay="CENTER" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentSizeConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm" />
                      </children>
                   </HBox>
                </children>
@@ -97,14 +99,24 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="163.0">
                      <children>
-                        <Button fx:id="confirmSegment" disable="true" mnemonicParsing="false" onMouseClicked="#handleSegmentConfirmation" text="Confirm Segment" />
+                        <Button fx:id="confirmSegment" disable="true" mnemonicParsing="false" onAction="#handleSegmentConfirmation" text="Confirm Segment" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="cancel" mnemonicParsing="false" onMouseClicked="#handleCancelButton" text="Cancel" />
+                        <Button fx:id="cancel" mnemonicParsing="false" onAction="#handleCancelButton" text="Cancel" />
                      </children>
                   </HBox>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="198.0" prefWidth="521.0">
+               <children>
+                  <TableView fx:id="segmentsTable" disable="true" prefHeight="187.0" prefWidth="554.0" HBox.hgrow="ALWAYS">
+                    <columns>
+                      <TableColumn fx:id="segmentName" prefWidth="265.0" text="Name" />
+                      <TableColumn fx:id="segmentSize" prefWidth="265.0" text="Size" />
+                    </columns>
+                  </TableView>
                </children>
             </HBox>
          </children>
