--- a/MemoryManagement/src/memorymanagement/AddProcess.fxml
+++ b/MemoryManagement/src/memorymanagement/AddProcess.fxml
@@ -2,125 +2,108 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="581.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.AddProcessController">
    <children>
-      <VBox alignment="CENTER" layoutX="93.0" layoutY="-17.0" prefHeight="200.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox alignment="CENTER" prefHeight="29.0" prefWidth="320.0" VBox.vgrow="NEVER">
+      <TitledPane fx:id="allocateProcessTitlePane" collapsible="false" layoutX="30.0" layoutY="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="320.0">
                <children>
-                  <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+                  <HBox alignment="CENTER" layoutX="10.0" layoutY="77.0" prefHeight="60.0" prefWidth="521.0">
                      <children>
-                        <Label fx:id="labelPID" text="PID" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
+                           <children>
+                              <Label fx:id="segmentNumber" text="No of Segments:" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+                           <children>
+                              <TextField fx:id="numberInputed" prefHeight="25.0" prefWidth="142.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Button fx:id="confirmNumber" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentNumberConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
                      </children>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+                  <HBox alignment="CENTER" layoutX="10.0" layoutY="60.0" prefHeight="60.0" prefWidth="521.0">
                      <children>
-                        <Label fx:id="currentPID" text="ID" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
+                           <children>
+                              <Label fx:id="labelsegmentName" disable="true" text="Segment Name:" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+                           <children>
+                              <TextField fx:id="nameInputed" disable="true" prefHeight="25.0" prefWidth="142.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="54.0" prefWidth="62.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" layoutX="10.0" layoutY="88.0" prefHeight="60.0" prefWidth="200.0">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
+                           <children>
+                              <Label fx:id="labelsegmentSize" disable="true" text="Segment Size:" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+                           <children>
+                              <TextField fx:id="sizeInputed" disable="true" prefHeight="25.0" prefWidth="142.0" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+                           <children>
+                              <ChoiceBox fx:id="sizeUnit_choiceBox" disable="true" prefHeight="25.0" prefWidth="62.0" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" layoutX="10.0" layoutY="77.0" prefHeight="52.0" prefWidth="499.0">
+                     <children>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="163.0">
+                           <children>
+                              <Button fx:id="confirmSegment" disable="true" mnemonicParsing="false" onAction="#handleSegmentConfirmation" text="Confirm Segment" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Button fx:id="cancel" mnemonicParsing="false" onAction="#handleCancelButton" text="Cancel" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="198.0" prefWidth="521.0">
+                     <children>
+                        <TableView fx:id="segmentsTable" disable="true" prefHeight="228.0" prefWidth="499.0" HBox.hgrow="ALWAYS">
+                          <columns>
+                              <TableColumn fx:id="segmentIDColumn" prefWidth="75.0" text="ID" />
+                            <TableColumn fx:id="segmentName" prefWidth="188.0" text="Name" />
+                            <TableColumn fx:id="segmentSize" prefWidth="235.0" text="Size (bytes)" />
+                          </columns>
+                        </TableView>
                      </children>
                   </HBox>
                </children>
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="77.0" prefHeight="60.0" prefWidth="521.0">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
-                     <children>
-                        <Label fx:id="segmentNumber" text="No of Segments:" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
-                     <children>
-                        <TextField fx:id="numberInputed" prefHeight="25.0" prefWidth="142.0" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Button fx:id="confirmNumber" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentNumberConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm">
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="60.0" prefHeight="60.0" prefWidth="521.0">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
-                     <children>
-                        <Label fx:id="labelsegmentName" disable="true" text="Segment Name:" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
-                     <children>
-                        <TextField fx:id="nameInputed" disable="true" prefHeight="25.0" prefWidth="142.0" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Button fx:id="confirmName" alignment="CENTER" contentDisplay="CENTER" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentNameConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm" />
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="88.0" prefHeight="60.0" prefWidth="200.0">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="101.0">
-                     <children>
-                        <Label fx:id="labelsegmentSize" disable="true" text="Segment Size:" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
-                     <children>
-                        <TextField fx:id="sizeInputed" disable="true" prefHeight="25.0" prefWidth="142.0" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Button fx:id="confirmSize" alignment="CENTER" contentDisplay="CENTER" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentSizeConfirmation" prefHeight="25.0" prefWidth="62.0" text="Confirm" />
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="77.0" prefHeight="100.0" prefWidth="320.0">
-               <children>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="163.0">
-                     <children>
-                        <Button fx:id="confirmSegment" disable="true" mnemonicParsing="false" onAction="#handleSegmentConfirmation" text="Confirm Segment" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="cancel" mnemonicParsing="false" onAction="#handleCancelButton" text="Cancel" />
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="198.0" prefWidth="521.0">
-               <children>
-                  <TableView fx:id="segmentsTable" disable="true" prefHeight="187.0" prefWidth="554.0" HBox.hgrow="ALWAYS">
-                    <columns>
-                      <TableColumn fx:id="segmentName" prefWidth="265.0" text="Name" />
-                      <TableColumn fx:id="segmentSize" prefWidth="265.0" text="Size" />
-                    </columns>
-                  </TableView>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
+            </VBox>
+         </content>
+      </TitledPane>
    </children>
    <padding>
       <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
