--- a/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
+++ b/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
 <AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="961.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemorySimulationController">
@@ -31,7 +32,13 @@
             </AnchorPane>
           <AnchorPane prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <ScrollPane fx:id="scrollPane" layoutX="48.0" layoutY="37.0" pannable="true" prefHeight="538.0" prefWidth="451.0" style="-fx-background: Black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <HBox alignment="TOP_RIGHT" layoutX="213.0" layoutY="-36.0" maxHeight="32.0" maxWidth="64.0" minHeight="32.0" minWidth="64.0" prefHeight="32.0" prefWidth="64.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onKeyPressed="#zoomOut_keyboardEvent" onMouseClicked="#zoomOut_mouseEvent" prefHeight="32.0" prefWidth="32.0" text="-" />
+                        <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onKeyPressed="#zoomIn_keyboardEvent" onMouseClicked="#zoomIn_mouseEvent" prefHeight="32.0" prefWidth="32.0" text="+" />
+                     </children>
+                  </HBox>
+                  <ScrollPane fx:id="scrollPane" layoutX="48.0" layoutY="37.0" pannable="true" prefHeight="538.0" prefWidth="451.0" style="-fx-background: Black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0" />
                </children>
             </AnchorPane>
         </items>
